...

    <!--- Elementos para el spinner de selección de cada alimento -->
    <string-array name="spinerCereales">
        <!-- Cereales 74 -->
        <item>Arroz, crudo</item>
        <item>Arroz, cocido</item>
        <item>Arroz integral, crudo</item>
        <item>Arroz intregral, cocido</item>
        <item>Arroz hinchado para desayuno</item>
        <item>Arroz salvaje, crudo</item>
        <item>Arroz salvaje, cocido</item>
        <item>Avena, crudo</item>
        <item>Avena, cocido</item>
        <item>Avena copos</item>
        <item>Boniato</item>
        <item>Cebada, crudo</item>
        <item>Cebada, cocido</item>
...
        <item>Yogur entero sabores o fruta</item>
        <item>Yogur líquido</item>
        <item>Yogur tipo Actimel</item>
        <item>Yogur tipo Actimel 0%</item>

        <!-- Cereales - 74 -->
        <item>Arroz crudo</item>
        <item>Arroz cocido</item>
        <item>Arroz integral, crudo</item>
        <item>Arroz intregral, cocido</item>
        <item>Arroz hinchado para desayuno</item>
        <item>Arroz salvaje, crudo</item>
        <item>Arroz salvaje, cocido</item>
        <item>Avena crudo</item>
...
        <item>Centeno crudo</item>
        <item>Centeno cocido</item>
        <item>Cereales desayuno</item>
        <item>Cereales desay. ricos en fibra tipo All-bram, óptima</item>
        <item>Cuscús crudo</item>
        <item>Cuscús cocido</item>
        <item>Fideos de arroz, tipo Udon cocido</item>
        <item>Fideos de soja cocido</item>
        <item>Galletas tipo Digestiva</item>
        <item>Galletas tipo Maria</item>
        <item>Galletas tipo Príncipe</item>
        <item>Galleta sin azúcar</item>
        <item>Garbanzo crudo</item>
...
