...


    <!--- Strings de Menu principal -->
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_menu_principal">Menú Principal</string>
    <string name="acerca_de">UBUDiabetes 2.0 Aplicación de control de la diabetes en dispositivos móviles.\n\</string>
    <string name="bt_bolo">Calcular bolo</string>
    <string name="main_registro">Registro de glucemias</string>
    <string name="main_historial">Historial de glucemias</string>
    <string name="main_registroIngestas">Consultar Ingestas</string>
    <string name="welcome">Bienvenido</string>


...
    <string name="consejo_intensidad_alta">Además para su actividad física, tome suplementos (10 a 20gr de hidratos de carbono), preferentemente líquidos cada 30-45 minutos.</string>
    <string name="consejo_intensidad_media">Además debe tomar un suplemento de 15 a 20 gr de hidratos de carbono, y realizar un control a la mitad y al final del ejercicio.</string>
    <string name="consejo_intensidad_irregular">Además no debe administrarse más insulina hasta concluir con la actividad física.</string>
    <string name="bt_mascomida">Añadir otro</string>
    <string name="resultado_bolo">Las unidades de insulina necesarias del bolo corrector son: </string>
    <string name="ingerir_carbohidratos">Nivel de glucemia demasiado bajo. Necesita ingerir carbohidratos.</string>
    <string name="bolo">Bolo corrector</string>
    <string name="title_activity_carbohidratos">Carbohidratos</string>
    <string name="tv_carbohidratos">Selecciona el alimento de la ingesta</string>
    <string name="tv_valorgramos">Introduce la cantidad del alimento (Grs)</string>
    <string name="bt_finalizar">Finalizar</string>
    <string name="aceptar">Aceptar</string>
    <string name="title_activity_launcher">Launcher</string>
    <string name="registro_lista_ingesta_correcta">Lista Ingesta registrada correctamente</string>
    <string name="textregistrando">Registrando datos</string>
    <string name="textregistrofinalizado">Registro finalizado</string>


...
